# Fillit

./: .env  .gitignore  README.md  app.py  clickable_items.json  codegen.py  cv.txt  filler.py  jsutils.py  llmparser.py  mcpserver.py  models.py  mybrowser.py  pyproject.toml  reader.py  start_chrome.bat  start_chrome.py  test_dom.py  webui.py
